deploy/hub2lab-hook/templates/failfast-flower-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: ff-flower
  name: ff-flower
spec:
  type: ClusterIP
  ports:
    - port: 5555
      targetPort: 5555
      name: flower
  selector:
    k8s-app: ff-flower
