deploy/hub2lab-hook/templates/redis-svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: redis
  name: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    k8s-app: redis
