deploy/hub2lab-hook/templates/ingress-flower.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ff-flower
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - hosts:
    - ff-flower.failfast-ci.io
    secretName: ff-flower-tls
  rules:
  - host: ff-flower.failfast-ci.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ff-flower
          servicePort: 5555
